--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,12 @@
   "description": "Doctor patient management application",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "vite build",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
@@ -72,6 +73,7 @@
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "jsdom": "^24.0.0",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "vite": "^6.1.0"
   }
 }
