--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.712.0",
     "@aws-sdk/client-ses": "^3.712.0",
+    "@aws-sdk/s3-request-presigner": "^3.806.0",
     "@sendgrid/mail": "^8.1.3",
     "await-exec": "^0.1.2",
     "bcryptjs": "^2.4.3",
